Stop using gforcada.compile-python
For older versions of Ubuntu without an up-to-date py27 or py35 it is useful,
for an Ubuntu 16.04 that's not the case.

It can be re-evaluated later on.

--- a/tasks/venv.yml
+++ b/tasks/venv.yml
@@ -15,4 +15,4 @@
   pip:
     requirements=/tmp/requirements.txt
     virtualenv=/home/jenkins/venv-requests
-    virtualenv_command=/srv/python2.7/bin/virtualenv
+    virtualenv_command=/usr/bin/virtualenv
