--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -8,6 +8,9 @@
 # Node.js
 - include: nodejs.yml
 
+# Install python 2.6
+- include: py26.yml
+
 # Create virtual environments
 - include: venv.yml
 
