--- a/tasks/py26.yml
+++ b/tasks/py26.yml
@@ -14,5 +14,8 @@
 - name: "py26: install python 2.6"
   become: yes
   apt:
-    name="python2.6"
+    name={{ item }}
     state=present
+  with_items:
+    - python2.6
+    - python2.6-dev
