--- a/tasks/system.yml
+++ b/tasks/system.yml
@@ -61,6 +61,15 @@
     name=en_US.ISO-8859-15
     state=present
 
+- name: "System: set environment variables"
+  become: yes
+  lineinfile:
+    dest: /etc/environment
+    line: "{{ item }}"
+  with_items:
+    - "LC_ALL=en_US.UTF-8"
+    - "LANG=en_US.UTF-8"
+
 # Set Timezone to US/Pacific (default was: 'Etc/UTC')
 # XXX: Only a single test requires this in plone.app.form 2.2.x
 # https://github.com/plone/plone.app.form/blob/2.2.x/plone/app/form/widgets/datecomponents.txt
