--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -11,6 +11,9 @@
 # Install python 2.6
 - include: py26.yml
 
+# Install pip on py27 and py35
+- include: pip.yml
+
 # Create virtual environments
 - include: venv.yml
 
