--- a/tasks/system.yml
+++ b/tasks/system.yml
@@ -41,6 +41,7 @@
     # python dev headers
     - python2.7-dev
     - python3.5-dev
+    - python3-venv
     # Pillow deps
     - libjpeg8-dev
     - libwebp-dev
