Simplify installing public key
Since ansible 1.9 one can use an URL with the key argument,
so there is no need to first download the key locally and then look it up.

--- a/tasks/user.yml
+++ b/tasks/user.yml
@@ -5,18 +5,12 @@
   user:
     name=jenkins
 
-- name: "User: download authorized key"
-  get_url:
-    url=https://raw.githubusercontent.com/plone/jenkins.plone.org/master/jenkins.plone.org.pub
-    dest=/tmp/jenkins.authorized_keys
-  delegate_to: 127.0.0.1
-
 - name: "User: install authorized key"
   become: yes
   become_user: jenkins
   authorized_key:
     user=jenkins
-    key="{{ lookup('file', '/tmp/jenkins.authorized_keys') }}"
+    key=https://raw.githubusercontent.com/plone/jenkins.plone.org/master/jenkins.plone.org.pub
 
 - name: "User: git config"
   become: yes
