--- a/tasks/python.yml
+++ b/tasks/python.yml
@@ -4,7 +4,7 @@
 - name: "python (py26): add deadsnakes PPA"
   become: yes
   apt_repository:
-    repo='ppa:fkrull/deadsnakes'
+    repo='ppa:deadsnakes/ppa'
 
 - name: "python (py26): update"
   become: yes
