--- a/tasks/user.yml
+++ b/tasks/user.yml
@@ -6,7 +6,7 @@
 
 - name: "user: download authorized key"
   get_url:
-    url=https://raw.githubusercontent.com/plone/jenkins.plone.org/master/jenkins.plone.org.pub
+    url=https://raw.githubusercontent.com/plone/jenkins.plone.org/master/files/jenkins.plone.org.pub
     dest=/tmp/jenkins.authorized_keys
   delegate_to: 127.0.0.1
 
