--- a/tasks/system.yml
+++ b/tasks/system.yml
@@ -13,7 +13,7 @@
     state=present
   with_items:
     # Java is needed in order to connect the Jenkins slaves to the master
-    - openjdk-7-jre
+    - openjdk-8-jre
     # Basics
     - build-essential
     - htop
@@ -36,8 +36,8 @@
     # Python versions
     - python2.7
     - python2.7-dev
-    - python3.4
-    - python3.4-dev
+    # - python3.4
+    # - python3.4-dev
     # Keep /tmp folder clean
     - tmpreaper
     # Pillow dependencies
