--- a/meta/main.yml
+++ b/meta/main.yml
@@ -13,5 +13,7 @@ galaxy_info:
   - development
 
 dependencies:
-  - geerlingguy.nodejs
+  - { role: geerlingguy.nodejs,
+     nodejs_version: "8.x",
+  }
   - geerlingguy.munin-node
