--- a/meta/main.yml
+++ b/meta/main.yml
@@ -16,4 +16,11 @@ dependencies:
   - { role: geerlingguy.nodejs,
      nodejs_version: "8.x",
   }
+  - { role: gforcada.compile-python,
+     python_26: true,
+     python_27: true,
+     python_36: true,
+     lxml: true,
+     pillow: true,
+  }
   - geerlingguy.munin-node
