--- a/meta/main.yml
+++ b/meta/main.yml
@@ -20,6 +20,7 @@ dependencies:
      python_26: true,
      python_27: true,
      python_36: true,
+     python_37: true,
      lxml: true,
      pillow: true,
   }
