--- a/tasks/system.yml
+++ b/tasks/system.yml
@@ -45,6 +45,19 @@
     - fail2ban
     - unattended-upgrades
 
+  - name: Install npm package dependencies (globally)
+    npm:
+      name: '{{ item }}'
+      global: yes
+      state: present
+    with_items:
+      - yarn
+      - npm-run-all
+      - prettier
+      - lint
+      - flow
+      - eslint
+      
 # Install a locale suited to run tests
 # https://github.com/plone/Products.CMFPlone/blob/master/Products/CMFPlone/tests/testUnicodeSplitter.py
 - name: "System: install locale"
