--- a/files/default.cfg
+++ b/files/default.cfg
@@ -3,3 +3,4 @@ eggs-directory = /home/jenkins/.buildout/eggs
 download-directory = /home/jenkins/.buildout/downloads
 extends-cache = /home/jenkins/.buildout/extends
 download-cache = /home/jenkins/.buildout/cache
+abi-tag-eggs = true
