--- a/tasks/firefox.yml
+++ b/tasks/firefox.yml
@@ -14,14 +14,14 @@
 - name: "Browsers: Firefox: remove stock version from distro"
   become: yes
   apt:
-    name=firefox
-    state=absent
+    name: firefox
+    state: absent
 
 - name: "Browsers: Firefox: remove custom version"
   become: yes
   apt:
-    name=firefox-mozilla-build
-    state=absent
+    name: firefox-mozilla-build
+    state: absent
   when: firefox_is_installed.stdout == 'install' and firefox_installed_version.stdout != firefox_version
 
 - name: "Browsers: Firefox: enable source repository"
@@ -32,19 +32,19 @@
 
 - name: "Browsers: Firefox: install system dependencies"
   apt:
-    pkg=firefox
-    state=build-dep
+    pkg: firefox
+    state: build-dep
   when: firefox_is_installed.stdout != 'install'
 
 - name: "Browsers: Firefox: download"
   get_url:
-    url="{{ firefox_url }}"
-    dest=/tmp
-    checksum="sha512:{{ firefox_checksum }}"
+    url: "{{ firefox_url }}"
+    dest: /tmp
+    checksum: "sha512:{{ firefox_checksum }}"
   when: firefox_is_installed.stdout != 'install' or firefox_installed_version.stdout != firefox_version
 
 - name: "Browsers: Firefox: install"
   become: yes
   apt:
-    deb="/tmp/{{ firefox_file_name }}"
+    deb: "/tmp/{{ firefox_file_name }}"
   when: firefox_is_installed.stdout != 'install' or firefox_installed_version.stdout != firefox_version
