--- a/tasks/geckodriver.yml
+++ b/tasks/geckodriver.yml
@@ -8,14 +8,14 @@
 
 - name: "Browsers: geckodriver: Download"
   get_url:
-    url="{{ geckodriver_url }}"
-    dest="/tmp"
-    checksum="sha512:{{ geckodriver_checksum }}"
+    url: "{{ geckodriver_url }}"
+    dest: "/tmp"
+    checksum: "sha512:{{ geckodriver_checksum }}"
   when: already_installed.stdout != geckodriver_version
 
 - name: "Browsers: geckodriver: Uncompress"
   unarchive:
-    src=/tmp/{{ geckodriver_file_name }}
-    dest=/usr/local/bin/
-    copy=no
+    src: /tmp/{{ geckodriver_file_name }}
+    dest: /usr/local/bin/
+    copy: no
   when: already_installed.stdout != geckodriver_version
