--- a/meta/main.yml
+++ b/meta/main.yml
@@ -6,22 +6,21 @@ galaxy_info:
   license: license (GPLv2, CC-BY, etc)
   min_ansible_version: 1.7.2
   platforms:
-  - name: Ubuntu
-    versions:
-      - trusty
+    - name: Ubuntu
+      versions:
+        - trusty
   categories:
-  - development
+    - development
 
 dependencies:
-  - { role: gforcada.compile-python,
-     python_27: true,
-     python_36: true,
-     python_37: true,
-     python_38: true,
-     python_39: true,
-     python_310: true,
-     python_311: true,
-     python_312: true,
-     lxml: true,
-     pillow: true,
-  }
+  - role: gforcada.compile_python
+    python_27: true
+    python_36: true
+    python_37: true
+    python_38: true
+    python_39: true
+    python_310: true
+    python_311: true
+    python_312: true
+    lxml: true
+    pillow: true
