--- a/tasks/system.yml
+++ b/tasks/system.yml
@@ -1,13 +1,12 @@
 ---
-
 - name: "System: update"
-  become: yes
+  become: true
   apt:
     upgrade: dist
-    update_cache: yes
+    update_cache: true
 
 - name: "System: install dependencies"
-  become: yes
+  become: true
   apt:
     state: present
     name:
@@ -46,8 +45,8 @@
 
 - name: Install npm package dependencies (globally)
   npm:
-    name: '{{ item }}'
-    global: yes
+    name: "{{ item }}"
+    global: true
     state: present
   with_items:
     - yarn
@@ -60,13 +59,13 @@
 # Install a locale suited to run tests
 # https://github.com/plone/Products.CMFPlone/blob/master/Products/CMFPlone/tests/testUnicodeSplitter.py
 - name: "System: install locale"
-  become: yes
+  become: true
   locale_gen:
     name: en_US.ISO-8859-15
     state: present
 
 - name: "System: set environment variables"
-  become: yes
+  become: true
   lineinfile:
     dest: /etc/environment
     line: "{{ item }}"
@@ -78,40 +77,40 @@
 # XXX: Only a single test requires this in plone.app.form 2.2.x
 # https://github.com/plone/plone.app.form/blob/2.2.x/plone/app/form/widgets/datecomponents.txt
 - name: "System: set timezone to US/Pacific"
-  become: yes
+  become: true
   timezone:
     name: US/Pacific
 
 # UFW
 - name: "System: set UFW to deny all"
-  become: yes
+  become: true
   ufw:
     state: enabled
     policy: deny
     direction: incoming
 
 - name: "System: set UFW to allow OpenSSH"
-  become: yes
+  become: true
   ufw:
     rule: allow
     name: OpenSSH
 
 - name: "System: set UFW to allow Port 80"
-  become: yes
+  become: true
   ufw:
     rule: allow
     port: 80
     proto: tcp
 
 - name: "System: set UFW to allow Port 443"
-  become: yes
+  become: true
   ufw:
     rule: allow
     port: 443
     proto: tcp
 
 - name: "System: set UFW to allow port 4949 from munin master"
-  become: yes
+  become: true
   ufw:
     rule: allow
     src: 162.209.104.107
@@ -120,7 +119,7 @@
 
 # fail2ban
 - name: "System: upload fail2ban jail.local"
-  become: yes
+  become: true
   copy:
     src: jail.local
     dest: /etc/fail2ban/jail.local
@@ -129,7 +128,7 @@
 
 # unattended-upgrades
 - name: "System: configure unattended-upgrades"
-  become: yes
+  become: true
   copy:
     src: 10periodic
     dest: /etc/apt/apt.conf.d/10periodic
@@ -138,7 +137,7 @@
     mode: 0644
 
 - name: "System: upload unattended-upgrades configuration"
-  become: yes
+  become: true
   copy:
     src: 50unattended-upgrades
     dest: /etc/apt/apt.conf.d/50unattended-upgrades
@@ -149,7 +148,7 @@
 
 # tmpreaper
 - name: "System: configure tmpreaper"
-  become: yes
+  become: true
   lineinfile:
     dest: /etc/tmpreaper.conf
     regexp: "^TMPREAPER_TIME:"
