chore(lint): keep lines shorter

--- a/tasks/firefox.yml
+++ b/tasks/firefox.yml
@@ -21,11 +21,15 @@
   apt:
     name: firefox-mozilla-build
     state: absent
-  when: firefox_is_installed.stdout == 'install' and firefox_installed_version.stdout != firefox_version
+  when: >
+    firefox_is_installed.stdout == 'install' and
+    firefox_installed_version.stdout != firefox_version
 
 - name: "Browsers: Firefox: enable source repository"
   apt_repository:
-    repo: deb-src http://us.archive.ubuntu.com/ubuntu/ {{ ansible_distribution_release }} main restricted
+    repo: |
+      deb-src http://us.archive.ubuntu.com/ubuntu/
+      {{ ansible_distribution_release }} main restricted
     state: present
   when: firefox_is_installed.stdout != 'install'
 
@@ -40,10 +44,14 @@
     url: "{{ firefox_url }}"
     dest: /tmp
     checksum: "sha512:{{ firefox_checksum }}"
-  when: firefox_is_installed.stdout != 'install' or firefox_installed_version.stdout != firefox_version
+  when: >
+    firefox_is_installed.stdout != 'install' or
+    firefox_installed_version.stdout != firefox_version
 
 - name: "Browsers: Firefox: install"
   become: true
   apt:
     deb: "/tmp/{{ firefox_file_name }}"
-  when: firefox_is_installed.stdout != 'install' or firefox_installed_version.stdout != firefox_version
+  when: >
+    firefox_is_installed.stdout != 'install' or
+    firefox_installed_version.stdout != firefox_version
