--- a/meta/main.yml
+++ b/meta/main.yml
@@ -5,13 +5,13 @@ galaxy_info:
   company: Plone Foundation
   role_name: jenkins_node
   namespace: plone
-  license: license (GPLv2, CC-BY, etc)
+  license: GPL-2.0
   min_ansible_version: "2.2"
   platforms:
     - name: Ubuntu
       versions:
         - trusty
-  categories:
+  galaxy_tags:
     - development
 
 dependencies:
