--- a/tasks/browsers.yml
+++ b/tasks/browsers.yml
@@ -1,22 +1,20 @@
 ---
 # Install/configure everything related to web browsers
 
-# Firefox
-- include: firefox.yml
+- name: Install Firefox
+  ansible.builtin.import_tasks: firefox.yml
 
-# geckodriver
-- include: geckodriver.yml
+- name: Install geckodriver
+  ansible.builtin.import_tasks: geckodriver.yml
 
-# PhantomJS
 - name: "Browsers: PhantomJS: install"
   become: true
-  apt:
+  ansible.builtin.apt:
     name: phantomjs
     state: present
 
-# Chrome
 - name: "Browsers: Chromium: install"
   become: true
-  apt:
-    name: ['chromium-browser', 'chromium-chromedriver']
+  ansible.builtin.apt:
+    name: [chromium-browser, chromium-chromedriver]
     state: present
