--- a/tasks/system.yml
+++ b/tasks/system.yml
@@ -42,6 +42,20 @@
       - ufw
       - fail2ban
       - unattended-upgrades
+      # Playwright dependencies
+      - libwoff1
+      - libvpx9
+      - libevent-2.1-7t64
+      - libgstreamer-plugins-base1.0-0
+      - libgstreamer-gl1.0-0
+      - libgstreamer-plugins-bad1.0-0
+      - libharfbuzz-icu0
+      - libenchant-2-2
+      - libsecret-1-0
+      - libhyphen0
+      - libmanette-0.2-0
+      - libflite1
+      - gstreamer1.0-libav
 
 - name: Install npm package dependencies (globally)
   community.general.npm:
