--- a/tasks/system.yml
+++ b/tasks/system.yml
@@ -45,12 +45,10 @@
       - unattended-upgrades
       # Playwright dependencies
       - libwoff1
-      - libvpx9
-      - libevent-2.1-7t64
-      - libgstreamer-plugins-base1.0-0
-      - libgstreamer-gl1.0-0
-      - libgstreamer-plugins-bad1.0-0
-      - libharfbuzz-icu0
+      - libvpx-dev
+      - libevent-dev
+      - libgstreamer1.0-dev
+      - libharfbuzz-dev
       - libenchant-2-2
       - libsecret-1-0
       - libhyphen0
