--- a/tasks/system.yml
+++ b/tasks/system.yml
@@ -57,6 +57,7 @@
       - gstreamer1.0-libav
 
 - name: Install npm package dependencies (globally)
+  become: true
   community.general.npm:
     name: "{{ item }}"
     global: true
