Install 'acl' package.
For me this is needed to prevent:

```
Ansible Error: Failed to set permissions on the temporary files
```

This is during the tasks in `user.yml` that use `become_user: jenkins`.

--- a/tasks/system.yml
+++ b/tasks/system.yml
@@ -12,6 +12,7 @@
     name:
       # Java is needed in order to connect the Jenkins slaves to the master
       - openjdk-21-jre
+      - acl
       # Basics
       - build-essential
       - htop
